# trend-terminal

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/components/: __init__.py  dashboard.py
app/pages/: 2_screener.py  3_stock_detail.py  4_backtest.py  5_settings.py
backtest/: __init__.py  engine.py  metrics.py
config/: config.yaml  watchlist.txt
core/: __init__.py  data_fetcher.py  indicators.py  llm_analyzer.py  news_classifier.py  signals.py  universes.py
notifications/: __init__.py  telegram.py
storage/: __init__.py  cache.py  database.py  models.py
tests/: __init__.py  test_backtest.py  test_indicators.py  test_news_classifier.py  test_signals.py
